feat: removed maxFsThreads config as that would be limited by the amount of connections. Also switched to virtual threads everywhere